# causal-pred

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: build-paper.yml
data/mr_cache/: v1__ebi-a-GCST90002244__ebi-a-GCST005195__p5e-08_r0.001_kb10000.json  v1__ebi-a-GCST90002244__ieu-b-110__p5e-08_r0.001_kb10000.json  v1__ebi-a-GCST90002244__ieu-b-38__p5e-08_r0.001_kb10000.json  v1__ebi-a-GCST90002244__ieu-b-40__p5e-08_r0.001_kb10000.json  v1__ebi-a-GCST90002244__ukb-b-12493__p5e-08_r0.001_kb10000.json  v1__ieu-b-110__ebi-a-GCST005195__p5e-08_r0.001_kb10000.json  v1__ieu-b-110__ebi-a-GCST006867__p5e-08_r0.001_kb10000.json  v1__ieu-b-110__ebi-a-GCST90002244__p5e-08_r0.001_kb10000.json  v1__ieu-b-110__ieu-b-38__p5e-08_r0.001_kb10000.json  v1__ieu-b-110__ieu-b-40__p5e-08_r0.001_kb10000.json  v1__ieu-b-110__ukb-b-12493__p5e-08_r0.001_kb10000.json  v1__ieu-b-25__ebi-a-GCST005195__p5e-08_r0.001_kb10000.json  v1__ieu-b-25__ebi-a-GCST006867__p5e-08_r0.001_kb10000.json  v1__ieu-b-25__ebi-a-GCST90002244__p5e-08_r0.001_kb10000.json  v1__ieu-b-25__ieu-b-110__p5e-08_r0.001_kb10000.json  v1__ieu-b-25__ieu-b-38__p5e-08_r0.001_kb10000.json  v1__ieu-b-25__ieu-b-40__p5e-08_r0.001_kb10000.json  v1__ieu-b-25__ukb-b-12493__p5e-08_r0.001_kb10000.json  v1__ieu-b-38__ebi-a-GCST005195__p5e-08_r0.001_kb10000.json  v1__ieu-b-38__ebi-a-GCST006867__p5e-08_r0.001_kb10000.json  v1__ieu-b-38__ebi-a-GCST90002244__p5e-08_r0.001_kb10000.json  v1__ieu-b-38__ieu-b-110__p5e-08_r0.001_kb10000.json  v1__ieu-b-38__ieu-b-40__p5e-08_r0.001_kb10000.json  v1__ieu-b-38__ukb-b-12493__p5e-08_r0.001_kb10000.json  v1__ieu-b-40__ebi-a-GCST005195__p5e-08_r0.001_kb10000.json  v1__ieu-b-40__ebi-a-GCST006867__p5e-08_r0.001_kb10000.json  v1__ieu-b-40__ebi-a-GCST90002244__p5e-08_r0.001_kb10000.json  v1__ieu-b-40__ieu-b-110__p5e-08_r0.001_kb10000.json  v1__ieu-b-40__ieu-b-38__p5e-08_r0.001_kb10000.json  v1__ieu-b-40__ukb-b-12493__p5e-08_r0.001_kb10000.json  v1__tophits__ebi-a-GCST90002244__p5e-08_r0.001_kb10000.json  v1__tophits__ieu-b-110__p5e-08_r0.001_kb10000.json  v1__tophits__ieu-b-25__p5e-08_r0.001_kb10000.json  v1__tophits__ieu-b-38__p5e-08_r0.001_kb10000.json  v1__tophits__ieu-b-40__p5e-08_r0.001_kb10000.json  v1__tophits__ukb-b-12493__p5e-08_r0.001_kb10000.json  v1__tophits__ukb-b-4710__p5e-08_r0.001_kb10000.json  v1__ukb-b-12493__ebi-a-GCST005195__p5e-08_r0.001_kb10000.json  v1__ukb-b-12493__ebi-a-GCST006867__p5e-08_r0.001_kb10000.json  v1__ukb-b-12493__ebi-a-GCST90002244__p5e-08_r0.001_kb10000.json  (+10 more)
docs/: ARCHITECTURE.md  MATHEMATICAL_NOTES.md  RUNBOOK.md
outputs/: benchmarks.json  dagslam_adjacency.npy  mcmc_edge_probs.npy  mrdag_pi.npy  report.html  run_config.json  summary.json  survival_mean.npy  t_grid.npy
paper/: Makefile  bib.bib  build_paper.py  main.tex
scripts/: benchmark.py  bootstrap_aou.sh  generate_figures.py  generate_report.py  prepare_aou_prs.py  run_full_pipeline.py
src/causal_pred/: __init__.py  _parallel.py  benchmarks.py  graph.py  pipeline.py  plots.py
src/causal_pred/dagslam/: __init__.py  search.py
src/causal_pred/data/: __init__.py  cohort.py  gwas.py  nodes.py  opengwas.py  polygenic.py  real_gwas.py  synthetic.py
src/causal_pred/gam/: __init__.py  nuts.py  splines.py  survival.py
src/causal_pred/genscore/: __init__.py  crosscoder.py  integrate.py  labels.py  panels.py  plots.py
src/causal_pred/mcmc/: __init__.py  structure_mcmc.py
src/causal_pred/mrdag/: __init__.py  pipeline.py
src/causal_pred/scoring/: __init__.py  mixed.py
src/causal_pred/validation/: __init__.py  known_edges.py  metrics.py
tests/: conftest.py  test_benchmarks.py  test_cohort.py  test_crosscoder.py  test_dagslam.py  test_docs.py  test_ehr_panel.py  test_gam.py  test_genscore_integration.py  test_genscore_plots.py  test_gwas.py  test_mcmc.py  test_mrdag.py  test_opengwas.py  test_panels.py  test_paper.py  test_pipeline.py  test_plots.py  test_polygenic.py  test_scoring.py  test_synthetic.py  test_validation.py
