[project]
name = "causal-pred"
version = "0.1.0"
description = "Causal disease modelling with uncertainty (MrDAG + DAGSLAM + MCMC + distributional survival GAM)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "causal-pred authors" }]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "pyarrow>=15",
    "scikit-learn>=1.4",
    "networkx>=3.0",
    "statsmodels>=0.14",
    "matplotlib>=3.8",
    "google-cloud-bigquery>=3.25",
    "google-cloud-bigquery-storage>=2.25",
    "db-dtypes>=1.2",
    # GAM backend -- Python bindings for SauersML/gam's Rust engine,
    # published on PyPI as ``gamfit``.
    "gamfit",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-xdist>=3", "ruff>=0.6"]

[dependency-groups]
dev = ["pytest>=8", "pytest-xdist>=3", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/causal_pred"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
