[project]
name = "causal-pred"
version = "0.1.0"
description = "Causal disease modelling with uncertainty (MrDAG + DAGSLAM + MCMC + survival GAM)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "causal-pred authors" }]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "pyarrow>=15",
    "scikit-learn>=1.4",
    "networkx>=3.0",
    "statsmodels>=0.14",
    "matplotlib>=3.8",
    "google-cloud-bigquery>=3.25",
    "google-cloud-bigquery-storage>=2.25",
    "db-dtypes>=1.2",
    "torch>=2.3",
    "gamfit>=0.1.19",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-xdist>=3", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/causal_pred"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

# AoU notebook VMs ship NVIDIA driver 535.x which only supports CUDA <=12.2.
# The default PyPI torch wheel is built against newer CUDA and refuses to
# initialize ("driver too old"), forcing crosscoder training to fall back
# off the GPU. Pin the cu121 wheel on Linux so torch.cuda.is_available()
# is True on Tesla T4 boxes. macOS dev still uses the PyPI wheel (MPS).
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
